<resources>
    <string name="app_name">量表评估</string>

    <!-- Strings related to login -->
    <string name="prompt_email">输入账号</string>
    <string name="prompt_name">输入姓名</string>
    <string name="prompt_gender">输入性别</string>
    <string name="prompt_culture">文化程度</string>
    <string name="prompt_marry">婚姻家庭状况</string>
    <string name="prompt_password">密码 (可选)</string>
    <string name="action_sign_in">登录</string>
    <string name="action_to_register">现在注册！</string>
    <string name="action_register">注册</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="error_invalid_email">邮箱地址不合法</string>
    <string name="error_invalid_password">密码太短了</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">注册</string>
    <string name="prompt_age">输入年龄</string>
</resources>
